--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "homepage": "https://github.com/romajuanmanuel/Dynamic-User-Interface#readme",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.27.7",
+    "@babel/preset-env": "^7.27.2",
+    "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
